// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListGroup /> create list group 1`] = `
<ul
  className="fd-list-group blue"
>
  <li
    className="fd-list-group__item blue"
  >
    <a
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      List item 1
    </a>
  </li>
  <li
    className="fd-list-group__item"
  >
    List item 2
  </li>
  <li
    className="fd-list-group__item"
  >
    <a
      style={
        Object {
          "cursor": "pointer",
        }
      }
    >
      List item3
    </a>
  </li>
  <li
    className="fd-list-group__item"
  >
    List item 4
  </li>
  <li
    className="fd-list-group__item"
  >
    List item 1
    <span
      className="fd-list-group__action blue"
    >
      <button
        className="fd-button fd-button--standard sap-icon--edit"
      />
    </span>
  </li>
</ul>
`;

exports[`<ListGroup /> create list group 2`] = `
<ul
  className="fd-list-group"
>
  <li
    className="fd-list-group__item"
  >
    List item 1
    <span
      className="fd-list-group__action"
    >
      <button
        className="fd-button fd-button--standard sap-icon--edit"
      />
    </span>
  </li>
</ul>
`;

exports[`<ListGroup /> create list group 3`] = `
<ul
  className="fd-list-group"
>
  <li
    className="fd-list-group__item"
  >
    <div
      className="fd-form-item"
    >
      <label
        className="fd-form-label"
      >
        <input
          aria-checked="false"
          className="fd-checkbox"
          id="foo2"
          onChange={[Function]}
          type="checkbox"
        />
        List item 1
        
      </label>
    </div>
  </li>
</ul>
`;
